Prevent long links in ToC from making ToC too wide.
Props joyously.
Fixes https://meta.trac.wordpress.org/ticket/6732.

--- a/source/wp-content/themes/wporg-developer/scss/main.scss
+++ b/source/wp-content/themes/wporg-developer/scss/main.scss
@@ -2007,6 +2007,7 @@ aside[id^="nav_menu"] .widget-title {
 	.table-of-contents {
 		display: flex;
 		flex-direction: column;
+		max-width: 25vw;
 		min-width: 210px;
 		border: 1px solid #eee;
 		margin: 30px 0;
@@ -2495,6 +2496,7 @@ body.responsive-show {
 		float: none;
 		margin-left: 0;
 		width: 100%;
+		max-width: 100%;
 	}
 }
 
